...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cCD-qX-aPu">
                                <rect key="frame" x="310.5" y="597" width="45" height="45"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="45" id="42q-p1-r6z"/>
                                    <constraint firstAttribute="height" constant="45" id="ZDy-2r-bbS"/>
                                </constraints>
                                <state key="normal" image="arrowTowads"/>
                                <connections>
                                    <action selector="rightButton:" destination="AvV-3h-Td9" eventType="touchUpInside" id="ivf-TA-OWJ"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="happy" translatesAutoresizingMaskIntoConstraints="NO" id="XwK-75-Cz0">
                                <rect key="frame" x="127.5" y="502" width="120" height="120"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jr0-XQ-akt">
                                <rect key="frame" x="314" y="20" width="45" height="45"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="Avi-ll-D1j"/>
                                    <constraint firstAttribute="width" constant="45" id="sQq-Ks-42w"/>
                                </constraints>
                                <state key="normal" image="tick"/>
                                <connections>
                                    <action selector="tickButtonTapped:" destination="AvV-3h-Td9" eventType="touchUpInside" id="rXE-TJ-IH5"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="0.65098039215686276" green="0.83921568627450982" blue="0.90980392156862744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <rect key="frame" x="274" y="125" width="97" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="Vmi-ly-qUI"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="97" id="gbJ-hr-4Bu"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="italicSystem" pointSize="16"/>
                                <state key="normal" title="Clear Filter"/>
                                <connections>
                                    <action selector="clearFilterButtonTapped:" destination="9pv-A4-QxB" eventType="touchUpInside" id="BIe-gk-Wus"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4hF-5O-jEW">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="20"/>
...
                                <rect key="frame" x="2" y="17" width="80" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="952-zr-pK3"/>
                                    <constraint firstAttribute="height" constant="40" id="Yqs-fE-kgg"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="log out"/>
                                <connections>
                                    <segue destination="cLm-bQ-Zrc" kind="show" id="txH-xU-pXe"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zQP-Of-z94">
                                <rect key="frame" x="181" y="349" width="45" height="30"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="07f-Ut-igw">
                                <rect key="frame" x="141" y="406" width="100" height="100"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="100" id="QDZ-vz-YcH"/>
                                    <constraint firstAttribute="width" constant="100" id="yZa-TC-EfF"/>
                                </constraints>
                                <state key="normal" image="letsDoit"/>
                                <connections>
                                    <action selector="writeButtonTapped:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="F8I-Vk-YdC"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Write " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zOa-JJ-IjB">
                                <rect key="frame" x="13" y="449" width="145" height="72"/>
...
                                </constraints>
                                <state key="normal" image="album"/>
                                <connections>
                                    <action selector="accessLibrary:" destination="rIL-cI-CB4" eventType="touchUpInside" id="96N-jd-Ky6"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Tittle" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9xO-M6-Isl">
                                <rect key="frame" x="40" y="92" width="294" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="294" id="U8A-xn-jh1"/>
                                    <constraint firstAttribute="height" constant="30" id="jGP-ce-e2M"/>
                                </constraints>
                                <nil key="textColor"/>
...
